@@ -108,11 +108,7 @@ static tConfItem<int> scc("SOUND_CHANNELS",numSoundcardChannels);
 int musicActive = 1;
 static tConfItem<int> se("MUSIC_ACTIVE", musicActive);
 
-#ifndef WIN32
 float buffersize = 4.0;
-#else
-float buffersize = 0.5;
-#endif
 static tConfItem<float> sbs("SOUND_BUFFER_SIZE", buffersize);
 
 tString titleTrack("music/titletrack.ogg");
